--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Minimal Portfolio for Web Developers</title>
+    <meta
+      name="description"
+      content="Transforming Concepts into Seamless User Experiences"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <nav>
+    <a href="#">About</a>
+    <a href="#">Projects</a>
+    <a href="#">Testimonials</a>
+    <a href="#">Contact</a>
+  </nav>
+  <body>
+    <main>
+      <section class="about-me">
+        <h1>Dynamic Web Magic with Next.js</h1>
+        <h2 class="about-me title">
+          Transforming Concepts into Seamless User Experiences
+        </h2>
+        <p class="about-me text">
+          Hi! I’m John Doe, a Next.js Developer based in Russia
+        </p>
+        <button class="about-me button">
+          See my work<img src="./src/svg/Arrow.svg" />
+        </button>
+      </section>
+    </main>
+  </body>
 </html>
