--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <nav>
+       <div class="nav-box">
     <a href="#">About</a>
     <a href="#">Projects</a>
     <a href="#">Testimonials</a>
     <a href="#">Contact</a>
+        </div>
   </nav>
   <body>
     <main>
       <section class="about-me">
         <h1>Dynamic Web Magic with Next.js</h1>
         <h2 class="about-me title">
-          Transforming Concepts into Seamless User Experiences
+          Transforming Concepts into <br>Seamless User Experiences
         </h2>
         <p class="about-me text">
           Hi! I’m John Doe, a Next.js Developer based in Russia
