--- a/index.html
+++ b/index.html
@@ -34,6 +34,217 @@
           See my work<img src="./src/svg/Arrow.svg" />
         </button>
       </section>
+      <section class="portfolio">
+        <div class="portfolio-upper-box">
+          <div class="upper-box left">
+            <p>
+              I prioritize client collaboration, fostering open communication
+            </p>
+          </div>
+
+          <div class="upper-box-right">
+            <div class="upper-box upper-right">
+              <p>I’m very flexible with time zone communications</p>
+            </div>
+            <div class="upper-box down-right">
+              <p>I constantly try to improve</p>
+              <p>My tech stack</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="portfolio-lower-box">
+          <div class="lower-box-left">
+            <div class="lower-box-up">
+              <p>Tech enthusiast with a passion for development.</p>
+            </div>
+            <div class="lower-box-down">
+              <p>Do you want to start a project together?</p>
+            </div>
+          </div>
+          <div class="lower-box-right">
+            <div class="lower-box-right-main">
+              <p>The Inside Scoop</p>
+              <p>Currently building a JS Animation library</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="recent-projects">
+        <h2 class="recent-projects-title">
+          A small selection of recent projects
+        </h2>
+
+        <div class="recent-projects-box">
+          <div class="card-1">
+            <img src="./src/img/solar-system.png" alt="solar system" />
+            <p class="card-title">3D Solar System Planets to Explore</p>
+            <p class="card-text">
+              Explore the wonders of our solar system with this captivating 3D
+              simulation of the planets using Three.js.
+            </p>
+            <div class="card-footer">
+              <div class="card-footer-icons">
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/atom.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/wave.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/ts.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/triangle.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/m.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+              </div>
+              <div class="card-footer-link">
+                <a href="*">Check Live Site</a>
+                <img src="./src/svg/Arrow.svg" />
+              </div>
+            </div>
+          </div>
+
+          <div class="card-2">
+            <img src="./src/img/yoom.png" alt="video app" />
+            <p class="card-title">Yoom - Video Conferencing App</p>
+            <p class="card-text">
+              Simplify your video conferencing experience with Yoom. Seamlessly
+              connect with colleagues and friends.
+            </p>
+            <div class="card-footer">
+              <div class="card-footer-icons">
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/n.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/wave.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/ts.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/boat.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/tech.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+              </div>
+              <div class="card-footer-link">
+                <a href="./src/img/canva-app.png">Check Live Site</a>
+                <img src="./src/svg/Arrow.svg" />
+              </div>
+            </div>
+          </div>
+
+          <div class="card-3">
+            <img src="./src/img/canva-app.png" alt="canva app" />
+            <p class="card-title">AI Image SaaS - Canva Application</p>
+            <p class="card-text">
+              A REAL Software-as-a-Service app with AI features and a payments
+              and credits system using the latest tech stack.
+            </p>
+            <div class="card-footer">
+              <div class="card-footer-icons">
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/atom.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/wave.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/ts.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/triangle.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/tech.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+              </div>
+              <div class="card-footer-link">
+                <a href="*">Check Live Site</a>
+                <img src="./src/svg/Arrow.svg" />
+              </div>
+            </div>
+          </div>
+
+          <div class="card-4">
+            <img src="./src/img/iphone-site.png" alt="animated website" />
+            <p class="card-title">Animated Apple Iphone 3D Website</p>
+            <p class="card-text">
+              Recreated the Apple iPhone 15 Pro website, combining GSAP
+              animations and Three.js 3D effects.
+            </p>
+            <div class="card-footer">
+              <div class="card-footer-icons">
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/n.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/wave.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/ts.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/triangle.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+                <p>
+                  <a href="*"
+                    ><img src="./src/img/man.png" width="49.09" alt="icon"
+                  /></a>
+                </p>
+              </div>
+              <div class="card-footer-link">
+                <a href="*">Check Live Site</a>
+                <img src="./src/svg/Arrow.svg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
